--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:8011469048" class="contact-link">+91 80xxxxxxxxx</a>
+              <a href="" class="contact-link">+91 80xxxxxxxxx</a>
             </div>
 
           </li>
