--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ My interests extend beyond the digital realm; I also enjoy painting and experime
         </header>
 
         
-        <a href="https://drive.google.com/file/d/14HJJGUkXeX1U6D335o2YwgJFlhvwP8fx/view?usp=drive_link" download style="text-decoration: none;">
+        <a href="https://drive.google.com/file/d/14HJJGUkXeX1U6D335o2YwgJFlhvwP8fx/view?usp=sharing" download style="text-decoration: none;">
           <button class="download-btn">
             <ion-icon name="download-outline" style="vertical-align: middle;"></ion-icon>
             &nbsp;Download CV
